--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="company-logo-testimonial" src="images/tnw.png" alt="tc-logo">
+<!--     <img class="company-logo-testimonial" src="images/tnw.png" alt="tc-logo"> -->
     <img class="company-logo-testimonial" src="images/tnw.png" alt="tnw-logo">
     <img class="company-logo-testimonial" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="company-logo-testimonial" src="images/mashable.png" alt="mashable-logo">
