--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="" >Contact</a>
+              <a class="nav-link" href="" style="color:black" >Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" >Pricing</a>
+              <a class="nav-link" href=""style="color:black" >Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" >Download</a>
+              <a class="nav-link" href=""style="color:black" >Download</a>
             </li>
           </ul>
         </div>
@@ -151,7 +151,7 @@
   <!-- Press -->
 
   <section id="press">
-<!--     <img class="company-logo-testimonial" src="images/tnw.png" alt="tc-logo"> -->
+    <img class="company-logo-testimonial" src="images/techcrunch.png" alt="tc-logo">
     <img class="company-logo-testimonial" src="images/tnw.png" alt="tnw-logo">
     <img class="company-logo-testimonial" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="company-logo-testimonial" src="images/mashable.png" alt="mashable-logo">
