--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="row">
 
     <div class="col-md-6">
-      <h1  style="font-weight:900">Meet new and interesting dogs nearby.</h1>
+      <h1  style="" class="title-heading">Meet new and interesting dogs nearby.</h1>
       <button type="button" class="btn btn-dark btn-lg download-button-this-is-custome-class"><i class="fab fa-apple"></i> Download</button>
       <button type="button" class="btn btn-outline-light btn-lg download-button-this-is-custome-class"><i class="fab fa-google-play"></i> Download</button>
     </div>
