--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="" style="color:black" >Contact</a>
+              <a class="nav-link" href="" style="color:blac" >Contact</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href=""style="color:black" >Pricing</a>
