--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>TinDog</title>
       <!-- bootstrap css -->
@@ -37,7 +36,7 @@
 </head>
 
 <body>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <section id="title">
 <div class="container-fluid">
 
@@ -52,13 +51,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="" style="color:blac" >Contact</a>
+              <a class="nav-link" href="#footer" style="color:black" >Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""style="color:black" >Pricing</a>
+              <a class="nav-link" href="#pricing"style="color:black" >Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""style="color:black" >Download</a>
+              <a class="nav-link" href="#cta"style="color:black" >Download</a>
             </li>
           </ul>
         </div>
